# django-rich-views

./: .gitignore  README.md  pyproject.toml  setup.cfg
django_rich_views/: __init__.py  context.py  datetime.py  filterset.py  html.py  logs.py  middleware.py  model.py  options.py  queryset.py  related_forms.py  render.py  serializers.py  util.py  views.py  widgets.py
django_rich_views/static/django-rich-views/css/: default.css
django_rich_views/static/django-rich-views/js/: list.js
django_rich_views/templates/django-rich-views/include/: CDN_libs.html  list_js.html
django_rich_views/templatetags/: django-rich-views.py
django_rich_views/tests/: serializers.py
src/django_rich_views/: ajax.py  apps.py  context.py  css.py  datetime.py  filterset.py  html.py  middleware.py  model.py  queryset.py  related_forms.py  serializers.py  util.py  views.py  widgets.py
src/django_rich_views/static/django-rich-views/css/: default.css
src/django_rich_views/templates/django-rich-views/include/: CDN_libs.html
