[metadata]
name = django_rich_views
version = 0.3
author = Bernd Wechner
author_email = bwechner@yahoo.com
description = Rich generic views on rich objects for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bernd-wechner/django-rich-views
project_urls =
    Bug Tracker = https://github.com/bernd-wechner/django-rich-views/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Framework :: Django :: 3.2
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
python_requires = >=3.7
package_dir =
    = src
packages = django_rich_views
include_package_data = True
zip_safe = False
install_requires =
    Django
    django-autocomplete-light
    django-url-filter
    python-dateutil
    lxml
    django-mapbox-location-field
    django-markdownfield
    pytz	
	setuptools
    six
    sqlparse
    titlecase
    webcolors